fix: Added acyclic and m.id <> n.id filter    - acyclic prevents revisiting intermediate nodes    - m.id <> n.id excludes the starting node from results (undirected paths like A→B→A would return A)